# minigrid-crewai

./: README.md  pyproject.toml
crewai/: pyproject.toml
crewai/src/llm_robot_gym/: main.py
crewai/src/llm_robot_gym/crews/main_crew/config/: agents.yaml
crewai/src/llm_robot_gym/utils/: convert_space.py
openai/: agents_config.yaml  constants.py  main.py
openai_dspy/: convert_space.py  dspy_optimize.py  human_play_trainset_combined.yaml  human_run.py  main.py  output_types.py
openai_dspy/model_configs/: opti_model_2025-04-07_16.49.55.json  opti_model_2025-04-07_19.25.43.json  opti_model_2025-04-08_11.05.16.json  opti_model_2025-04-08_15.40.57.json  optimized_planner_model.json
openai_dspy/optimal_path_sim/: human_play_BabyAI-GoToLocal-v0.yaml  human_play_BabyAI-GoToLocalS5N2-v0.yaml  human_play_BabyAI-GoToLocalS6N2-v0.yaml  human_play_BabyAI-GoToLocalS6N3-v0.yaml  human_play_BabyAI-GoToLocalS6N4-v0.yaml  (+36 more)
pddl-code-minigrid/: agent.py  agent_tmp.py  coderLLM.py  llmclient.py  main.py  merged_curriculum2.json  mini_test.py  minigrid.py  minigridenv.py  plannerLLM.py
pddl-llm/: README.md  chatgpt_pddl4.py  chatgpt_pddl5.py  domain.pddl  domain_genone.pddl  problem.pddl  problem_genone.pddl  problem_zero.pddl  requirements.txt  test_all_models.py
ros2-ur5/: README.md  ros-install_pretty2.md  ros-install_pretty2.sh  run_commds.txt  working_commands.sh
sense-plan-act/: README.md  agent_start-latest.py  coderLLM.py  llmclient.py  main.py  merged_curriculum2.json  metrics_logger.py  minigridenv.py  plannerLLM.py  plot_success_rate.ipynb  requirements.txt
(+222 files in other folders)
